# discord-grpc-server

./: '  .gitignore  Cargo.toml  README.md  build.rs  runner.sh  rustfmt.toml
proto/: msg.proto
src/: broker.rs  main.rs  prompt.rs  queue.rs  server.rs
