[package]
name = "disc-grpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
prost = "0.11.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1.10"
tonic = "0.8.1"
tracing = "0.1.36"

[build-dependencies]
tonic-build = "0.8.0"
