[package]
name = "disc-grpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "mq-server"
path = "src/bin/server.rs"

[[bin]]
name = "mq-broker"
path = "src/bin/broker.rs"


[dependencies]
base64 = "0.13.0"
dotenv = "0.15.0"
prost = "0.11.0"
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serenity = { version = "0.11.5", features = ["framework"] }
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1.10"
tonic = { version = "0.8.1", features = ["gzip"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
zeromq = "0.3.3"

[build-dependencies]
tonic-build = "0.8.0"
